fix nav collapse button - delete hundreds of lines of code from bootstrap css

--- a/less/index.less
+++ b/less/index.less
@@ -58,73 +58,42 @@ a {
 	height: 100%;
 }
 
-@import './tabs.less';
 @import './variables.less';
+@import './header.less';
+@import './tabs.less';
 @import './footer.less';
 
-
-/************************************************ NAV */
-.header {
-	font-size: 2.0rem;	
-}
-.header a{
-	margin-top: 10px;
-}
-/************************************************ HEADER */
-.headIndex{
-	height: 400px;
-	background: url("../img/food.jpg");
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-
-.header .content {
-	height: 100%;
-	font-size: 3rem;
-	font-weight: bold;
-	text-align: right;
-	text-shadow: 4px 4px 26px white, 0 0 20px white, 0 0 15px white, 0 0 10px white;
-	color: #232c23;
-	padding: 90px 20px 20px 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: flex-end;
-	z-index: 1;
-
-	@media only screen and (min-width: 320px) and (max-width: 732px) {	
-		text-align: center;
-		justify-content: center;
-		align-items: center;
-		padding: 90px 10px 10px 10px;
-	}
-}
-
-.header h1 {
-      font-family: 'Pacifico', cursive;
-	font-size: 6rem;
-	padding-bottom: 40px;
-
-	span {
-		font-family:'Nunito', sans-serif;
-		font-size: 4rem;
-	}
-}
 /************************************ BODY */
 .container {
-	max-width: 800px;
+	max-width: 900px;
 	width: 100%;
 	margin: 0 auto;
+	font-family: 'Open sans', sans-serif;
+	font-size: 2rem;
 
+	h1{
+		font-family: 'Pacifico', cursive;
+		font-size: 4rem;
+		margin: 0 auto;
+		padding: 40px 0;
+	}
+
+	.cta {
+		width: 100%;
+		margin: 65px auto;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+
+	}
 	.section {
-		width: 70%;
+		width: 100%;
 		margin: 45px auto;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		border: 3px solid #232c23;
-		box-shadow: 1px 1px 5px #232c23;
+		box-shadow: 1px 1px 15px #232c23;
 		border-radius: 10px;
 		overflow: hidden;
 		.box {
@@ -135,7 +104,7 @@ a {
 			font-weight: bold;
 		  }
 		}
-	} //section
+	} 
 	@media only screen and (min-width: 320px) and (max-width: 732px) {
 		.container {
 			padding: 0 5%;
