--- a/less/tabs.less
+++ b/less/tabs.less
@@ -27,9 +27,9 @@
 
   .tabs-link {
     padding: 20px 25px;
-    font-size: 24px;
-    border-right: 1px solid white;
-    color: white;
+    font-size: 4rem;
+    border-right: 1px solid #232c23;
+    color: #232c23;
     cursor: pointer;
     &:hover {
       background-color: #8bc53e;
@@ -38,9 +38,10 @@
   .tabs-link-selected {
     z-index: 2;
     border-right: 1px solid #232c23;
-    background-color: white;
-    color: black;
+    background-color: #232c23;
+    color: white;
     &:hover {
+      color: #8bc53e;
       background-color: white;
     }
   }
